<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.customizer.view.CustomizerActivity">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/customizer_search"
        android:inputType="text"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading_spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layoutAnimation="@anim/layout_scale_in"
        app:layout_constraintBottom_toTopOf="@+id/cl_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:id="@+id/rl_x_container"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_x_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:contentDescription="@string/customizer_x_image_preview"
                android:padding="0dp" />

            <TextView
                android:id="@+id/tv_x_not_selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/screen"
                android:gravity="center"
                android:text="@string/customizer_x_not_attached"
                android:textColor="#202020" />

            <TextView
                android:id="@+id/tv_x_attach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/screen"
                android:drawableTop="@drawable/ic_touch_24dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/customizer_x_attach"
                android:textColor="#202020"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_y_container"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rl_x_container"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_y_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:contentDescription="@string/customizer_y_image_preview"
                android:padding="0dp" />

            <TextView
                android:id="@+id/tv_y_not_selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/screen"
                android:gravity="center"
                android:text="@string/customizer_y_not_attached"
                android:textColor="@color/screen_text" />

            <TextView
                android:id="@+id/tv_y_attach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/screen"
                android:drawableTop="@drawable/ic_touch_24dp"
                android:gravity="center"
                android:text="@string/customizer_y_attach"
                android:textColor="#202020"
                android:visibility="invisible" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_done"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/layout_capsule"
            android:gravity="center"
            android:text="@string/customizer_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rl_y_container"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>